# apps/learninggoalhub/client/openapi/openapi.json
@@ -897,6 +897,12 @@
           "text": {
             "type": "string"
           },
+          "shortLabel": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "kind": {
             "type": "string",
             "enum": [
